--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
   /* height: fit-content; */
   margin: 10rem auto;
   inset: 0px;
-  position: fixed;
+  /* position: fixed; */
   gap: 0.4rem;
 }
 .accordion {
@@ -83,9 +83,16 @@
   transition: 300ms ease-out;
   /* display: none; */
 }
+/* .accordion--active {
+font-size: 0; 
+  height: fit-content;
+  display: flex;
+ visibility: hidden;
+} */
+
 .accordion--active {
   /* font-size: 0; */
-  height: fit-content;
+  max-height: 5rem;
   display: flex;
   /* visibility: hidden; */
 }
